closDevOrg copy/force-app/main/default/objects/LOS_Application_Team__c/fields/LOS_Access_Level__c.field-meta.xml
<CustomField>
    <fullName>LOS_Access_Level__c</fullName>
    <description>Access Level. See docs/data-dictionary.md for usage.</description>
    <label>Access Level</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>