closDevOrg copy/force-app/main/default/objects/LOS_Application_Team__c/fields/LOS_Persona_Code__c.field-meta.xml
<CustomField>
    <fullName>LOS_Persona_Code__c</fullName>
    <description>Persona Code. See docs/data-dictionary.md for usage.</description>
    <label>Persona Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>