closDevOrg copy/force-app/main/default/objects/LOS_Application_Team__c/fields/LOS_User__c.field-meta.xml
<CustomField>
    <fullName>LOS_User__c</fullName>
    <description>User. See docs/data-dictionary.md for usage.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>LOS Application Team User</relationshipLabel>
    <relationshipName>LOS_Application_Team_User</relationshipName>
    <type>Lookup</type>
</CustomField>