closDevOrg copy/force-app/main/default/objects/LOS_Application_Team__c/validationRules/LOS_Required_User.validationRule-meta.xml
<ValidationRule>
    <fullName>LOS_Required_User</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(LOS_User__c)</errorConditionFormula>
    <errorMessage>User is required.</errorMessage>
</ValidationRule>